--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -5,6 +5,7 @@
       <input
         matInput
         type="text"
+        style="text-transform: uppercase"
         #todoInput
         (keyup.enter)="post(todoInput.value)"
         autofocus
